# dor

./: .gitignore  README.md  pyproject.toml
src/: index_documents.py  search_documents.py
